LPS-55599 Fix CSS alignment bug

--- a/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
+++ b/modules/apps/dynamic-data-lists/dynamic-data-lists-form-web/src/META-INF/resources/admin/css/main.scss
@@ -304,6 +304,10 @@
 		box-shadow: none;
 		margin: 0;
 		padding: 10px $side-spacing 10px $side-spacing;
+
+		label {
+			float: none;
+		}
 	}
 
 	.form-builder-field-list-add-button {
